# fdr-eaupotable-v2

./: .env.example  Dockerfile  Dockerfile.superset  Makefile  README.md  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  fdr-realm.json  pyproject.toml  superset_config.py
.github/workflows/: docker-release.yml
docker/postgres/: pg_hba.conf  postgresql.conf  prestart-postgres.sh
docker/postgres/initdb/: 10-create-readonly-user.sh
src/cli/: main.py
src/core/: config.py  db.py
src/etl/: load.py  transform.py  validate.py
src/fdr_etl/cli/: main.py
src/fdr_etl/core/: config.py  db.py  logging.py
src/fdr_etl/etl/: besoin_renouvellement.py  bootstrap.py  load.py  material_config.py  sql_queries.py  stats_engine.py  transform.py  validate.py
src/fdr_etl/schemas/: FDR_eau_potable_V6.gpkg  canalisation.json  eaupotable.json  perimetre.json  reparation.json  test_error_pipeline.gpkg
src/fdr_etl/web/: app.py
src/fdr_etl/web/static/: oidc.js
src/fdr_etl/web/templates/: index.html
src/fdr_etl/worker/: app.py  tasks.py
src/web/: app.py
src/worker/: app.py  tasks.py
tests/: test_validate.py
