[project]
name = "fdr-etl"
version = "0.1.0"
description = "ETL Project for fdr-eaupotable-v2"
authors = [
    { name = "Thomas Brosset" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask",
    "celery",
    "redis",
    "psycopg",
    "psycopg-binary",
    "python-dotenv",
    "frictionless[sql]",
    "gunicorn",
]

[project.scripts]
# cli entry point
fdr-cli = "fdr_etl.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.wheel]
packages = ["src/fdr_etl"]