[project]
name = "fdr-etl"
version = "0.1.0"
description = "ETL Project for fdr-eaupotable-v2"
authors = [
    { name = "Thomas Brosset" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery",
    "redis",
    "sqlalchemy",
    "psycopg",
    "psycopg-binary",
    "python-dotenv",
    "frictionless[sql]",
    "pytest",
    "fastapi",
    "uvicorn[standard]",
    "python-multipart",
    "jinja2",
    "pandas",
    "numpy"
]

[project.scripts]
# cli entry point
fdr-cli = "fdr_etl.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fdr_etl"]

[tool.ruff.lint]
extend-select = ["B", "E", "F", "I", "INP", "PL", "T20", "W"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["T20"]





