[project]
name = "fdr-etl"
version = "0.1.0"
description = "ETL Project for fdr-eaupotable-v2"
authors = [
    { name = "Thomas Brosset" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # --- Serveur web ---
    "fastapi",
    "uvicorn[standard]",
    "python-multipart",      # upload de fichiers
    "jinja2",                # templates HTML
    "httpx",                 # appels HTTP (requis par fastapi-oidc)

    # --- Authentification OIDC ---
    "fastapi-oidc",
    "python-jose[cryptography]",  # vérification JWT (dépendance de fastapi-oidc)

    # --- Worker Celery ---
    "celery",
    "redis",

    # --- Base de données ---
    "sqlalchemy",
    "psycopg[binary]", # ← remplace "psycopg" + "psycopg-binary"

    # --- ETL / Validation ---
    "python-dotenv",
    "frictionless[sql]",

    # --- Calculs ---
    "pandas",
    "numpy",
    "scipy",
    "pytest"
]

[project.scripts]
# cli entry point
fdr-cli = "fdr_etl.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fdr_etl"]

[tool.ruff.lint]
extend-select = ["B", "E", "F", "I", "INP", "PL", "T20", "W"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["T20"]





